--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pinterest Hero Section</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="hero">
+    <img src="https://storage.googleapis.com/acciojob-open-file-collections/pinterest.png" alt="Nature Image">
+    
+    <div class="hero-content">
+      <h1>Welcome to my Pinterest clone</h1>
+      <p>Discover new inspiration and save your favorite ideas</p>
+      <a href="#">Explore now</a>
+    </div>
+  </div>
 
 </body>
-
 </html>
